Process Hacker

2.4
 * NEW/IMPROVED:
   * Better Run As behaviour
   * Show Processes From All Users option
 * FIXED:
   * Memory leak
   * Crash when running under certain conditions
   * Memory case-insensitive filter
 * REMOVED:
   * Process database

2.3
 * NEW/IMPROVED:
   * Can add processes to jobs
   * Double-clicking in the system information graphs now opens 
     information for the relevant process
   * Setting I/O priority doesn't need KProcessHacker anymore
   * Elevation for certain actions
 * FIXED:
   * HKCU key name resolution
   * Network connection host resolution
   * Information window resizing
   * Log clearing

2.2
 * NEW/IMPROVED:
   * Plugins support
   * Can now unload 32-bit modules on 64-bit systems
   * Tasks are shown in tooltips for taskeng.exe/taskhost.exe processes
   * Run As can now start processes elevated
   * Handle count by type
   * Process priorities in notification icon menu
   * CSV export
   * Relative start times
 * FIXED:
   * Run and Run As shortcuts
   * Command line handling
   * Process tree selection

2.1
 * NEW/IMPROVED:
   * Add Pause key shortcut to pause/resume updates
   * Added Ctrl+Tab and Ctrl+Shift+Tab shortcuts
   * Grid is a bit darker
   * Checks for digital signatures and packing is now 
     off by default and optional
 * FIXED:
   * MD5 calculation code for files was wrong
   * Process record bugs

2.0
 * First release in the Process Hacker 2.x branch.